# floodsim

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  specyfikacja  specyfikacja.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp
app/Renderer/: OpenGLRenderer.cpp  OpenGLRenderer.h
app/Simulation/: Grid.cpp  Grid.h
app/Simulation/shaders/: grid_fragment.glsl  grid_vertex.glsl
app/UI/: MainWindow.cpp  MainWindow.h  MapView.cpp  MapView.h
scripts/: clang-format.sh  clang-tidy.sh
tests/: CMakeLists.txt  main.cpp  test_example.cpp
